--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiohttp==2.3.1
-aiohttp_cors==0.5.3
-aiofiles==0.3.1
 uvloop==0.8.1
-requests==2.18.4
+aiohttp==2.3.2
+aiohttp_cors==0.5.3
+pytest==3.2.3
+aiofiles==0.3.1
+pytest-aiohttp==0.1.3
