--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: bash
 sudo: required
 services:
   - docker
+install:
+  - pip install -r requirements.txt
 script:
   - make
-  - pip install -r requirements.txt
   - pytest -v
 after_success:
   - IMAGE_NAME=kbase/staging_service ./build/push2dockerhub.sh
