--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
-language: python
-python: "3.6"
 sudo: required
 services:
   - docker
+language: python
+python: "3.6"
 install:
   - pip install -r requirements.txt
 script:
-  - pytest -v
+  - python -m pytest -v
   - make
 after_success:
   - IMAGE_NAME=kbase/staging_service ./build/push2dockerhub.sh
