Revert "making the mount path a bit cleaner"
This reverts commit 89779d3bb456464d9fc7f18f4aa315c8ad79e7ab.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     # The following mount assumes the user dirs are under /data/bulk/{username}
     # it further assumes that there is a pre-existing /data/metadata directory
     volumes: 
-      - "./data:/data"
+      - "./data:/kb/deployment/lib/src/data"
