--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
     # it further assumes that there is a pre-existing /data/metadata directory
     volumes:
       - "./data:/kb/deployment/lib/src/data"
+    environment:
+      - "KB_DEPLOYMENT_CONFIG=/kb/deployment/conf/deployment.cfg"
