trying again to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python: "3.6"
 install:
   - pip install -r requirements.txt
 script:
-  - ./run_tests.sh
+  - sh run_tests.sh
   - make
 after_success:
   - IMAGE_NAME=kbase/staging_service ./build/push2dockerhub.sh
