--- a/deployment/conf/testing.cfg
+++ b/deployment/conf/testing.cfg
@@ -2,3 +2,4 @@
 META_DIR = ./data/metadata/
 DATA_DIR = ./data/bulk/
 AUTH_URL = https://ci.kbase.us/services/auth/api/V2/token
+CONCIERGE_DIR = /kb/deployment/lib/src/data/bulk/kbaseconcierge
