--- a/deployment/conf/deployment.cfg
+++ b/deployment/conf/deployment.cfg
@@ -2,4 +2,4 @@
 META_DIR = /kb/deployment/lib/src/data/metadata/
 DATA_DIR = /kb/deployment/lib/src/data/bulk/
 AUTH_URL = https://ci.kbase.us/services/auth/api/V2/token
-CONCIERGE_DIR = /kb/deployment/lib/src/data/bulk/kbaseconcierge
+CONCIERGE_PATH = /kbaseconcierge
