--- a/deployment/conf/deployment.cfg
+++ b/deployment/conf/deployment.cfg
@@ -3,3 +3,4 @@ META_DIR = /kb/deployment/lib/src/data/metadata/
 DATA_DIR = /kb/deployment/lib/src/data/bulk/
 AUTH_URL = https://ci.kbase.us/services/auth/api/V2/token
 CONCIERGE_PATH = /kbaseconcierge
+FILE_EXTENSION_MAPPINGS = supported_apps_w_extensions.json
