--- a/deployment/conf/supported_apps_w_extensions.json
+++ b/deployment/conf/supported_apps_w_extensions.json
@@ -6,7 +6,7 @@
       "output_type": [
         "KBaseGenomeAnnotations.Assembly"
       ],
-      "id": 0,
+      "id": 12,
       "extensions": [
         "fna",
         "fa",
@@ -21,7 +21,7 @@
       "output_type": [
         "KBaseGenomes.Genome"
       ],
-      "id": 1,
+      "id": 13,
       "extensions": [
         "fna",
         "fa",
@@ -36,7 +36,187 @@
       "output_type": [
         "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
       ],
-      "id": 2,
+      "id": 14,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "Assembly",
+      "app": "kb_uploadmethods/import_fasta_as_assembly_from_staging",
+      "output_type": [
+        "KBaseGenomeAnnotations.Assembly"
+      ],
+      "id": 12,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 13,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 14,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "Assembly",
+      "app": "kb_uploadmethods/import_fasta_as_assembly_from_staging",
+      "output_type": [
+        "KBaseGenomeAnnotations.Assembly"
+      ],
+      "id": 12,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 13,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 14,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "Assembly",
+      "app": "kb_uploadmethods/import_fasta_as_assembly_from_staging",
+      "output_type": [
+        "KBaseGenomeAnnotations.Assembly"
+      ],
+      "id": 12,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 13,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 14,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "Assembly",
+      "app": "kb_uploadmethods/import_fasta_as_assembly_from_staging",
+      "output_type": [
+        "KBaseGenomeAnnotations.Assembly"
+      ],
+      "id": 12,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 13,
+      "extensions": [
+        "fna",
+        "fa",
+        "faa",
+        "fsa",
+        "fasta"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 14,
       "extensions": [
         "fna",
         "fa",
@@ -52,7 +232,7 @@
         "KBaseFile.SingleEndLibrary",
         "KBaseFile.PairedEndLibrary"
       ],
-      "id": 3,
+      "id": 17,
       "extensions": [
         "fq",
         "fastq"
@@ -65,10 +245,114 @@
         "KBaseFile.SingleEndLibrary",
         "KBaseFile.PairedEndLibrary"
       ],
-      "id": 4,
+      "id": 18,
       "extensions": [
         "fq",
         "fastq"
+      ]
+    },
+    {
+      "title": "FastQ Reads Interleaved",
+      "app": "kb_uploadmethods/import_fastq_sra_as_reads_from_staging",
+      "output_type": [
+        "KBaseFile.SingleEndLibrary",
+        "KBaseFile.PairedEndLibrary"
+      ],
+      "id": 17,
+      "extensions": [
+        "fq",
+        "fastq"
+      ]
+    },
+    {
+      "title": "FastQ Reads UnInterleaved",
+      "app": "kb_uploadmethods/import_fastq_sra_as_reads_from_staging",
+      "output_type": [
+        "KBaseFile.SingleEndLibrary",
+        "KBaseFile.PairedEndLibrary"
+      ],
+      "id": 18,
+      "extensions": [
+        "fq",
+        "fastq"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 23,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 24,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 23,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 24,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
+      ]
+    },
+    {
+      "title": "GFF/FASTA Genome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 23,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
+      ]
+    },
+    {
+      "title": "GFF/FASTA MetaGenome",
+      "app": "kb_uploadmethods/import_gff_fasta_as_metagenome_from_staging",
+      "output_type": [
+        "KBaseMetagenomes.AnnotatedMetagenomeAssembly"
+      ],
+      "id": 24,
+      "extensions": [
+        "gff",
+        "gff2",
+        "gff3"
       ]
     },
     {
@@ -78,7 +362,7 @@
         "KBaseFile.SingleEndLibrary",
         "KBaseFile.PairedEndLibrary"
       ],
-      "id": 5,
+      "id": 25,
       "extensions": [
         "sra"
       ]
@@ -89,9 +373,22 @@
       "output_type": [
         "KBaseGenomes.Genome"
       ],
-      "id": 6,
+      "id": 27,
       "extensions": [
-        "gbk"
+        "gbk",
+        "genbank"
+      ]
+    },
+    {
+      "title": "Genbank Genome",
+      "app": "kb_uploadmethods/import_genbank_as_genome_from_staging",
+      "output_type": [
+        "KBaseGenomes.Genome"
+      ],
+      "id": 27,
+      "extensions": [
+        "gbk",
+        "genbank"
       ]
     },
     {
@@ -100,7 +397,7 @@
       "output_type": [
         "KBaseBiochem.Media"
       ],
-      "id": 7,
+      "id": 28,
       "extensions": [
         "tsv"
       ]
@@ -111,7 +408,7 @@
       "output_type": [
         "KBaseFeatureValues.ExpressionMatrix"
       ],
-      "id": 8,
+      "id": 29,
       "extensions": [
         "tsv"
       ]
@@ -122,7 +419,7 @@
       "output_type": [
         "KBaseGenomes.Genome"
       ],
-      "id": 9,
+      "id": 30,
       "extensions": [
         "tsv"
       ]
@@ -133,7 +430,7 @@
       "output_type": [
         "KBaseGenomes.Genome"
       ],
-      "id": 10,
+      "id": 31,
       "extensions": [
         "tsv"
       ]
@@ -144,7 +441,7 @@
       "output_type": [
         "KBaseFBA.FBAModel"
       ],
-      "id": 11,
+      "id": 32,
       "extensions": [
         "tsv"
       ]
@@ -155,7 +452,7 @@
       "output_type": [
         "KBasePhenotypes.PhenotypeSet"
       ],
-      "id": 12,
+      "id": 33,
       "extensions": [
         "tsv"
       ]
@@ -166,7 +463,7 @@
       "output_type": [
         "KBaseSets.SampleSet"
       ],
-      "id": 13,
+      "id": 34,
       "extensions": [
         "csv"
       ]
@@ -177,9 +474,33 @@
       "output_type": [
         "KBaseFBA.EscherMap"
       ],
-      "id": 14,
+      "id": 35,
       "extensions": [
         "json"
+      ]
+    },
+    {
+      "title": "Samples",
+      "app": "sample_uploader/import_samples",
+      "output_type": [
+        "KBaseSets.SampleSet"
+      ],
+      "id": 40,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "Media",
+      "app": "kb_uploadmethods/import_tsv_excel_as_media_from_staging",
+      "output_type": [
+        "KBaseBiochem.Media"
+      ],
+      "id": 41,
+      "extensions": [
+        "xls",
+        "xlsx"
       ]
     },
     {
@@ -188,7 +509,67 @@
       "output_type": [
         "KBaseExperiments.AttributeMapping"
       ],
-      "id": 15,
+      "id": 42,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "FBA Model",
+      "app": "kb_uploadmethods/import_file_as_fba_model_from_staging",
+      "output_type": [
+        "KBaseFBA.FBAModel"
+      ],
+      "id": 43,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "Samples",
+      "app": "sample_uploader/import_samples",
+      "output_type": [
+        "KBaseSets.SampleSet"
+      ],
+      "id": 40,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "Media",
+      "app": "kb_uploadmethods/import_tsv_excel_as_media_from_staging",
+      "output_type": [
+        "KBaseBiochem.Media"
+      ],
+      "id": 41,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "Attribute Mapping",
+      "app": "kb_uploadmethods/import_attribute_mapping_from_staging",
+      "output_type": [
+        "KBaseExperiments.AttributeMapping"
+      ],
+      "id": 42,
+      "extensions": [
+        "xls",
+        "xlsx"
+      ]
+    },
+    {
+      "title": "FBA Model",
+      "app": "kb_uploadmethods/import_file_as_fba_model_from_staging",
+      "output_type": [
+        "KBaseFBA.FBAModel"
+      ],
+      "id": 43,
       "extensions": [
         "xls",
         "xlsx"
@@ -200,7 +581,7 @@
       "output_type": [
         null
       ],
-      "id": 16,
+      "id": 51,
       "extensions": [
         "zip",
         "tar",
@@ -211,112 +592,311 @@
         "gzip",
         "rar"
       ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "Decompress/Unpack",
+      "app": "kb_uploadmethods/unpack_staging_file",
+      "output_type": [
+        null
+      ],
+      "id": 51,
+      "extensions": [
+        "zip",
+        "tar",
+        "tgz",
+        "tar.gz",
+        "7z",
+        "gz",
+        "gzip",
+        "rar"
+      ]
+    },
+    {
+      "title": "FBA Model",
+      "app": "kb_uploadmethods/import_file_as_fba_model_from_staging",
+      "output_type": [
+        "KBaseFBA.FBAModel"
+      ],
+      "id": 52,
+      "extensions": [
+        "smbl"
+      ]
     }
   ],
   "types": {
-    "rar": [
-      [
-        16,
-        1
-      ]
-    ],
-    "csv": [
-      [
-        13,
-        1
-      ]
-    ],
-    "fsa": [
-      [
-        0,
-        1
-      ],
-      [
-        1,
-        1
-      ],
-      [
-        2,
-        1
-      ]
-    ],
-    "fasta": [
-      [
-        0,
-        1
-      ],
-      [
-        1,
-        1
-      ],
-      [
-        2,
-        1
-      ]
-    ],
-    "tsv": [
-      [
-        7,
-        1
-      ],
-      [
-        8,
-        1
-      ],
-      [
-        9,
-        1
-      ],
-      [
-        10,
-        1
-      ],
-      [
-        11,
-        1
-      ],
+    "fa": [
       [
         12,
         1
-      ]
-    ],
-    "xls": [
+      ],
       [
-        15,
-        1
-      ]
-    ],
-    "fq": [
-      [
-        3,
+        13,
         1
       ],
       [
-        4,
+        14,
+        1
+      ]
+    ],
+    "json": [
+      [
+        35,
+        1
+      ]
+    ],
+    "fna": [
+      [
+        12,
+        1
+      ],
+      [
+        13,
+        1
+      ],
+      [
+        14,
+        1
+      ]
+    ],
+    "tar": [
+      [
+        51,
+        1
+      ]
+    ],
+    "tgz": [
+      [
+        51,
         1
       ]
     ],
     "zip": [
       [
-        16,
+        51,
         1
       ]
     ],
-    "fa": [
+    "fasta": [
       [
-        0,
+        12,
         1
       ],
       [
-        1,
+        13,
         1
       ],
       [
-        2,
+        14,
         1
       ]
     ],
-    "json": [
+    "fq": [
+      [
+        17,
+        1
+      ],
+      [
+        18,
+        1
+      ]
+    ],
+    "xls": [
+      [
+        40,
+        1
+      ],
+      [
+        41,
+        1
+      ],
+      [
+        42,
+        1
+      ],
+      [
+        43,
+        1
+      ]
+    ],
+    "gzip": [
+      [
+        51,
+        1
+      ]
+    ],
+    "xlsx": [
+      [
+        40,
+        1
+      ],
+      [
+        41,
+        1
+      ],
+      [
+        42,
+        1
+      ],
+      [
+        43,
+        1
+      ]
+    ],
+    "7z": [
+      [
+        51,
+        1
+      ]
+    ],
+    "csv": [
+      [
+        34,
+        1
+      ]
+    ],
+    "gz": [
+      [
+        51,
+        1
+      ]
+    ],
+    "gbk": [
+      [
+        27,
+        1
+      ]
+    ],
+    "fsa": [
+      [
+        12,
+        1
+      ],
+      [
+        13,
+        1
+      ],
+      [
+        14,
+        1
+      ]
+    ],
+    "faa": [
+      [
+        12,
+        1
+      ],
+      [
+        13,
+        1
+      ],
       [
         14,
         1
@@ -324,93 +904,97 @@
     ],
     "sra": [
       [
-        5,
-        1
-      ]
-    ],
-    "gz": [
-      [
-        16,
-        1
-      ]
-    ],
-    "tar": [
-      [
-        16,
-        1
-      ]
-    ],
-    "gbk": [
-      [
-        6,
-        1
-      ]
-    ],
-    "faa": [
-      [
-        0,
-        1
-      ],
-      [
-        1,
-        1
-      ],
-      [
-        2,
-        1
-      ]
-    ],
-    "tar.gz": [
-      [
-        16,
-        1
-      ]
-    ],
-    "7z": [
-      [
-        16,
-        1
-      ]
-    ],
-    "gzip": [
-      [
-        16,
+        25,
         1
       ]
     ],
     "fastq": [
       [
-        3,
+        17,
         1
       ],
       [
-        4,
+        18,
         1
       ]
     ],
-    "xlsx": [
+    "gff": [
       [
-        15,
-        1
-      ]
-    ],
-    "tgz": [
-      [
-        16,
-        1
-      ]
-    ],
-    "fna": [
-      [
-        0,
+        23,
         1
       ],
       [
-        1,
+        24,
+        1
+      ]
+    ],
+    "tar.gz": [
+      [
+        51,
+        1
+      ]
+    ],
+    "smbl": [
+      [
+        52,
+        1
+      ]
+    ],
+    "genbank": [
+      [
+        27,
+        1
+      ]
+    ],
+    "tsv": [
+      [
+        28,
         1
       ],
       [
-        2,
+        29,
+        1
+      ],
+      [
+        30,
+        1
+      ],
+      [
+        31,
+        1
+      ],
+      [
+        32,
+        1
+      ],
+      [
+        33,
+        1
+      ]
+    ],
+    "rar": [
+      [
+        51,
+        1
+      ]
+    ],
+    "gff3": [
+      [
+        23,
+        1
+      ],
+      [
+        24,
+        1
+      ]
+    ],
+    "gff2": [
+      [
+        23,
+        1
+      ],
+      [
+        24,
         1
       ]
     ]
