--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,10 +4,7 @@
 name: Run Staging Service Tests
 
 on:
-  push:
-    branches: [ develop, master ]
-  pull_request:
-    branches: [ develop, master ]
+  [push, pull_request]
 
 jobs:
   build:
