--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-actions.txt
+        pip install -r requirements.txt
     - name: Test with pytest
       run: |
         bash run_tests.sh
