--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ hypothesis==6.14.5
 globus-sdk==1.6.1
 python-dotenv==0.14.0
 frozendict==2.0.3
+pandas==1.3.2
+xlrd==2.0.1
+openpyxl==3.0.7
+defusedxml==0.7.1
