--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ pandas = "==1.3.2"
 xlrd = "==2.0.1"
 openpyxl = "==3.0.7"
 defusedxml = "==0.7.1"
+python-magic = "==0.4.24"
 
 [requires]
 python_version = "3.9"
